Angular.js frontend working

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,1 +1,14 @@
-<div>Main</div>
+<div id="main" class="container-fluid">
+  <div class="row input-margin">
+    <div class="col">
+      <input id="input">
+    </div>
+  </div>
+  <div class="row input-margin">
+    <div class="col">
+      <button class="button-primary">Search</button>
+      <button class="button-primary">Insert</button>
+      </div>
+    </div>
+  </div>
+</div>
